--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "check-formatting": "npx prettier --check projects/*.html src/* *.html",
-    "fix-formatting": "npx prettier -w src/* *.html",
+    "check-formatting": "npx prettier --check src/* data/* *.html",
+    "fix-formatting": "npx prettier -w src/* data/* *.html",
     "dev": "npx http-server -p 8000 . -c-1 --cors"
   },
   "repository": {
